@@ -3,7 +3,6 @@
 from fastapi import APIRouter, HTTPException, status
 
 from cems2 import log
-from cems2.API.routes import machine as machine_manager
 from cems2.schemas.machine import Machine
 from cems2.schemas.message import Message
 from cems2.schemas.metric import Metric
@@ -22,6 +21,7 @@ class MonitoringController(object):
     def __init__(self):
         """Initialize the controller."""
         self.cloud_analytics_manager = None
+        self.machine_manager = None
 
     def set_cloud_analytics_manager(self, cloud_analytics_manager):
         """Set the cloud analytics manager.
@@ -30,6 +30,39 @@ class MonitoringController(object):
         :type cloud_analytics_manager: Manager
         """
         self.cloud_analytics_manager = cloud_analytics_manager
+
+    def set_machine_manager(self, machine_manager):
+        """Set the machine manager.
+
+        :param machine_manager: machine manager
+        :type machine_manager: Manager
+        """
+        self.machine_manager = machine_manager
+
+    def machines_on_monitoring(self):
+        """
+        Get the machines on monitoring state from the Cloud Analytics Application.
+
+        :return: List of machines on monitoring state
+        :rtype: list[Machine]
+        """
+        # Create a list to store the machines
+        machine_model_list = []
+        machine_schema_list = []
+
+        # Get the machines from the Machine Manager (List of Machine models)
+        machine_model_list = self.machine_manager.get_machines(monitoring=True)
+
+        # Convert the list of Machine models to a list of Machine schemas
+        for machine in machine_model_list:
+            machine_schema_list.append(Machine.from_orm(machine))
+
+        # Return the list of machines
+        return machine_schema_list
+
+    def notify_update_monitoring(self):
+        """Notify to the CloudAnalyticsManager a machine update."""
+        self.cloud_analytics_manager.machines_monitoring = self.machines_on_monitoring()
 
 
 # Create the monitoring controller
@@ -43,7 +76,7 @@ monitoring_controller = MonitoringController()
     "/monitoring/metrics",
     summary="Get the lastest metrics from the cloud analytics application",
     status_code=status.HTTP_200_OK,
-    response_model=list[Metric],
+    response_model=dict[str, list[Metric]],
 )
 def _get_metrics(metric_name: str = None):
     """
@@ -55,15 +88,25 @@ def _get_metrics(metric_name: str = None):
     - **timestamp**: Timestamp of the metric
     - **hostname**: Hostname of the machine
 
-    **Returns**: A list of metrics
+    **Returns**: A dict of metrics
 
     **Optional filters:** The metrics can be filtered by the following parameters:
     - **metric_name**: Name of the metric
     """
     # Obtain the metrics from the Cloud Analytics Application
-    metric_list = []
+    metric_dict = monitoring_controller.cloud_analytics_manager.obtain_last_metrics()
 
-    return metric_list
+    # Filter the metrics by metric_name
+    if metric_name:
+        # For each machine in the dict of metrics (key: hostname, value: list of metrics)
+        for machine in metric_dict:
+            # Filter the metrics by metric_name
+            metric_dict[machine] = [
+                metric for metric in metric_dict[machine] if metric.name == metric_name
+            ]
+
+    # Return the dict of metrics
+    return metric_dict
 
 
 @monitoring.get(
@@ -86,12 +129,36 @@ def _get_metrics_by_id(id: str, metric_name: str = None):
 
     **Optional filters:** The metrics can be filtered by the following parameters:
     - **metric_name**: Name of the metric
-    """
-    # Create a list to store the metrics
-    metric_list = []
 
-    # Return the list of metrics
-    return metric_list
+    **Raises:**
+    - **HTTPException: 404**: If the machine does not exist by its ID
+    - **HTTPException: 400**: If the machine is not being monitored
+    """
+
+    # Check if the machine exists and raise an exception if it does not
+    machine = monitoring_controller.machine_manager.get_machine_by_id(id)
+
+    if not machine:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+            detail=f"Machine with ID: {id} does not exist",
+        )
+
+    # Check if the machine is on monitoring state and raise an exception if it is not
+    if not machine.monitoring:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+            detail=f"Machine with ID: {id} is not on monitoring state",
+        )
+
+    # Call the generic function _get_metrics and then filter by id
+    metric_dict = _get_metrics(metric_name)
+
+    # If the machine is not in the dict of metrics, return an empty list
+    if machine.hostname not in metric_dict:
+        return []
+    else:
+        return metric_dict[machine.hostname]
 
 
 @monitoring.get(
@@ -114,12 +181,36 @@ def _get_metrics_by_hostname(hostname: str, metric_name: str = None):
 
     **Optional filters:** The metrics can be filtered by the following parameters:
     - **metric_name**: Name of the metric
-    """
-    # Obtain the metrics from the Cloud Analytics Application
-    metric_list = []
 
-    # Return the list of metrics
-    return metric_list
+    **Raises:**
+    - **HTTPException: 404**: If the machine does not exist by its hostname
+    - **HTTPException: 400**: If the machine is not being monitored
+    """
+
+    # Check if the machine exists and raise an exception if it does not
+    machine = monitoring_controller.machine_manager.get_machine_by_hostname(hostname)
+
+    if not machine:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+            detail=f"Machine with hostname: {hostname} does not exist",
+        )
+
+    # Check if the machine is on monitoring state and raise an exception if it is not
+    if not machine.monitoring:
+        raise HTTPException(
+            status_code=status.HTTP_400_BAD_REQUEST,
+            detail=f"Machine with hostname: {hostname} is not on monitoring state",
+        )
+
+    # Call the generic function _get_metrics and then filter by hostname
+    metric_dict = _get_metrics(metric_name)
+
+    # If the machine is not in the dict of metrics, return an empty list
+    if machine.hostname not in metric_dict:
+        return []
+    else:
+        return metric_dict[machine.hostname]
 
 
 @monitoring.get(
@@ -149,35 +240,3 @@ def _get_plugins(type: str = None):
         plugin_list = [plugin for plugin in plugin_list if plugin.type == type]
 
     return plugin_list
-
-
-# INTERNAL METHODS
-
-
-def machines_on_monitoring():
-    """
-    Get the machines on monitoring state from the Cloud Analytics Application.
-
-    :return: List of machines on monitoring state
-    :rtype: list[Machine]
-    """
-    # Create a list to store the machines
-    machine_model_list = []
-    machine_schema_list = []
-
-    # Get the machines from the Machine Manager (List of Machine models)
-    machine_model_list = machine_manager.get_machines(monitoring=True)
-
-    # Convert the list of Machine models to a list of Machine schemas
-    for machine in machine_model_list:
-        machine_schema_list.append(Machine.from_orm(machine))
-
-    # Return the list of machines
-    return machine_schema_list
-
-
-def notify_update_monitoring():
-    """Notify to the CloudAnalyticsManager a machine update."""
-    monitoring_controller.cloud_analytics_manager.machines_monitoring = (
-        machines_on_monitoring()
-    )
