@@ -8,6 +8,7 @@ import uvicorn
 import cems2.API.api as api
 from cems2 import log
 from cems2.API.routes.actions import actions_controller
+from cems2.API.routes.machine import machine_manager
 from cems2.API.routes.monitoring import monitoring_controller
 from cems2.cloud_analytics.manager import Manager as CloudAnalyticsManager
 from cems2.machines_control.manager import Manager as MachinesControlManager
@@ -58,16 +59,36 @@ async def main():
     """
     LOG.info("Starting CEMS2")
 
+    # Load the monitoring controller to the machine manager
+    machine_manager.set_monitoring_controller(monitoring_controller)
+
+    # Load the actions controller to the machine manager
+    machine_manager.set_actions_controller(actions_controller)
+
+    # Load the machine manager to the monitoring controller
+    monitoring_controller.set_machine_manager(machine_manager)
+
     # Create the Cloud Analytics Manager
     cloud_analytics_manager = CloudAnalyticsManager()
 
-    # Pass the cloud_analytics_manager to the monitoring manager
+    # Load the cloud_analytics_manager to the monitoring manager
     monitoring_controller.set_cloud_analytics_manager(cloud_analytics_manager)
+
+    # Update the machines_monitoring list in the cloud_analytics_manager
+    cloud_analytics_manager.machines_monitoring = (
+        monitoring_controller.machines_on_monitoring()
+    )
+
+    # Load the monitoring controller to the actions manager
+    actions_controller.set_monitoring_controller(monitoring_controller)
+
+    # Load the machine manager to the actions manager
+    actions_controller.set_machine_manager(machine_manager)
 
     # Create the Machine Control Manager
     machines_control_manager = MachinesControlManager()
 
-    # Pass the machines_control_manager to the actions manager
+    # Load the machines_control_manager to the actions manager
     actions_controller.set_machines_control_manager(machines_control_manager)
 
     # Create 3 tasks to run in parallel
