@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Actions controller connected to Machines Control Manager + Added API endpoints to obtain plugins with filtering
+* Monitoring controller connected to Cloud Analytics Manager
 * Added endpoints to obtain de names of the plugins
 * Unified Endpoints path on monitoring controller
 * Launcher usign async library trio
